--- a/index (2).html
+++ b/index (2).html
@@ -29,7 +29,7 @@
       </div>
       <div class="inside">
         <p>Wishing you a very happy birthday filled with ❤️ Love and Happiness</p>
-        <img src="/Group_pic.jpeg" alt="">
+        <img src="Group_pic.jpeg" alt="">
       </div>
     </div>
 
@@ -48,7 +48,7 @@
       </div>
       <div class="inside">
         <p>Mam, may every single wish you make today become a reality. You deserve all the happiness and love in the world. Happy Birthday!</p>
-        <img src="/Birthday_party.jpeg" alt="">
+        <img src="Birthday_party.jpeg" alt="">
       </div>
       
     </div>
